# thoth-eye

./: README.md  pyproject.toml
thoth_eye/: dummy.py
thoth_eye/tensorflow_practice/.ipynb_checkpoints/: basics-checkpoint.ipynb
thoth_eye/tensorflow_practice/notebook_tutorials/basics/: 2_tensor.ipynb
thoth_eye/tensorflow_practice/notebook_tutorials/keras/: 6_preprocessing_layers.ipynb  7_customizing_what_happens_in_fit.ipynb
thoth_eye/tensorflow_tutorials/: basics.ipynb
thoth_eye/tensorflow_tutorials/.ipynb_checkpoints/: basics2-checkpoint.ipynb
thoth_eye/tensorflow_tutorials/keras/: 4_custom_layers_and_models.ipynb  8_writing_a_training_loop_from_scratch.ipynb
