[tool.poetry]
name = "thoth-eye"
version = "0.1.0"
description = ""
authors = ["Mostafa Eissa"]
readme = "README.md"
packages = [{include = "thoth_eye"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.24.0"
scikit-learn = "^1.2.0"
torch = "^1.13.1"
tensorflow = "^2.11.0"
torchvision = "^0.14.1"
torchaudio = "^0.13.1"
pytorch-lightning = "^1.8.6"
opencv-python = "^4.7.0.68"
pandas = "^1.5.2"
ipython = "^8.8.0"
psutil = "^5.9.4"
matplotlib = "^3.6.2"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
notebook = "^6.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
